# onetool-mcp

./: .chunkhound.json  .dockerignore  .gitignore  .gitleaksignore  404.html  AGENTS.md  AGENTS_PRIME.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  HANDOFF.md  LICENSE.txt  NOTICE.txt  README.md  ROADMAP.md  TODO.md  VISION.md  cliff.toml  copilot-instructions.md  index.html  justfile  llms.txt  mkdocs.yml  onetool-mcp-a1.code-workspace  onetool-mcp.code-workspace  pyproject.toml  release.just  server.json  servers.yaml  sitemap.xml  start.bat
.claude/commands/proj/: check-dev-docs.md  consult.md  doc-sync.md  prime.md  quick-apply.md  sanity.md  stage.md  test-explore.md
.github/workflows/: docs-check.yml  publish.yml
.jules/memory/: architecture.md
_internal/: index.html  specs.html
_internal/architecture/: index.html
_internal/attribution/: index.html
_internal/brand/brand/: index.html
_internal/brand/ref-claims/: index.html
_internal/brand/ref-links/: index.html
_internal/brand/ref-terminology/: index.html
_internal/brand/ref-tool-packs/: index.html
_internal/cli-patterns/: index.html
_internal/docs/: index.html
_internal/docs/best-practices/: index.html
_internal/docs/design-system/: index.html
_internal/internal-tools/: index.html
_internal/logging/: index.html
_internal/publish/: index.html
_internal/specs-viewer/: index.html
_internal/testing/: index.html
about/: index.html
about/about-onetool/: index.html
agents/: commit-scopes.md  commits.md  prime.md  repo.md  rules.md
demo/: .gitignore  README.md  justfile
demo/.onetool/config/: bench.yaml  onetool.yaml
demo/bench/: bench-compare.yaml  bench-token-cost.yaml  compare.yaml  tool_brave_search.yaml  tool_db.yaml  tool_web_fetch.yaml
demo/data/files/: file_example_PPT_1MB.pptx  file_example_XLS_1000.xlsx
demo/prompts/: onetool-in-action.md
dev/: index.md
dev/agents/: hints.md  index.md  project-map.md
dev/practices/: cli-patterns.md  commit-scopes.md  docs-writing.md  git.md  index.md  justfile.md  logging.md  python-style.md  release.md  testing.md
dev/project/arch/: configuration.md  core-concepts.md  execution-routing.md  index.md  proxy-flow.md  registry-system.md  request-pipeline.md  security-model.md
dev/project/brand/: claims.md  index.md  terminology.md
dev/project/guides/: attribution.md  configuration.md  creating-tools.md  index.md  tool-configuration.md  tool-ref-docs.md  tool-review.md
docs/: index.md  llms.txt  telemetry.md
docs/_internal/: architecture.md  attribution.md  cli-patterns.md  index.md  internal-tools.md  logging.md  publish.md  specs-viewer.md  testing.md
docs/_internal/brand/: brand.md  ref-claims.md  ref-links.md  ref-terminology.md  ref-tool-packs.md
docs/_internal/docs/: index.md
docs/about/: about-onetool.md  index.md
docs/extending/mkdocs/: best-practices.md  design-system.md  index.md
docs/learn/: comparison.md  configuration.md  direct-usage.md  explicit-calls.md  extension-tools.md  installation.md  quickstart.md  security.md  snippets.md  whats-new-v2.md
docs/learn/extending/: extension-tools.md  index.md  isolated-tools.md
docs/learn/guides/: chrome-devtools.md  index.md
docs/reference/: index.md
docs/reference/cli/: bench.md  index.md  onetool-config.md  onetool-direct.md  onetool.md
docs/results/: compare-vision.md  mem-vs-file-20260210.md  mem-vs-file-20260223.md  result-20260119.csv  result-20260223-0334.csv
docs/stylesheets/: extra.css
extending/: index.html
extending/creating-clis/: index.html
extending/creating-tools/: index.html
extending/extensions/: index.html
extending/logging/: index.html
extending/mkdocs/: index.html
extending/testing/: index.html
learn/: index.html
learn/comparison/: index.html
learn/configuration/: index.html
learn/database-queries/: index.html
learn/direct-usage/: index.html
learn/examples/: index.html
learn/explicit-calls/: index.html
learn/extending/: index.html
learn/extension-tools/: index.html
learn/guides/: index.html
learn/installation/: index.html
learn/prompting-best-practices/: index.html
learn/quickstart/: index.html
learn/security/: index.html
learn/snippets/: index.html
learn/whats-new-v2/: index.html
openspec/: config.yaml  project.md  specs.html
openspec/specs/: INDEX.md
reference/: index.html
reference/cli/: index.html
reference/servers/: index.html
reference/tools/: index.html
results/: result-20260119.csv  result-20260223-0334.csv
results/compare-mem-file/: index.html
results/compare-vision/: index.html
results/mem-vs-file-20260210/: index.html
results/mem-vs-file-20260223/: index.html
scripts/: check_docs_registry.py  generate_specs_html.py  release_publish.py  sync_docs_generated.py
search/: search_index.json
src/bench/: reporter.py  run.py  secrets.py  utils.py
src/onetool/: cli.py  kb.py
src/ot/: __init__.py  _cli.py  _tui.py  direct_host.py  meta.py  paths.py  prompts.py  server.py  telemetry.py  tools.py
src/ot_tools/: _inject_base.py  brave_search.py  code_search.py  devtools_util.py  diagram.py  file.py  firecrawl.py  mem.py  package.py  playwright_util.py  scaffold.py  timer.py  transform.py  web_fetch.py
src/otdev/: __init__.py  _inject_base.py
src/ottools/: __init__.py  _inject_base.py  chrome_devtools_util.py  claude_util.py  devtools_util.py  llm.py  mem.py  ot_direct.py  ot_forge.py  ot_image.py  ot_llm.py  ot_secrets.py  ot_timer.py  playwright_util.py  scaffold.py  server.py  skills.py
src/otutil/: __init__.py
stylesheets/: extra.css
telemetry/: index.html
tests/: _test_secrets.py  conftest.py
tests/.onetool/: onetool.yaml
tests/explore/: build-tool.md  compare-file.md  compare-mem.md  compare-search.md  compare-vision.md  draw-diagram.md  sanity.md  test-browser.md  test-cli.md  test-pack.md  test-prompt-injection.md
tests/integration/: test_docker.py
tests/otdev/: conftest.py
tests/otutil/: conftest.py
tests/sanity/: test_sanity-hints.md  test_sanity.md
tests/smoke/: test_cli_onetool.py  test_config.py
(+522 files in other folders)
